ardupilot_ws/logs/my_APMrover/build.make.024.log
[ 33%] Built target PN_node
[ 66%] Built target PN_node_turtlesim
[35m[1mScanning dependencies of target velocity_sending_node[0m
[ 83%] [32mBuilding CXX object CMakeFiles/velocity_sending_node.dir/src/velocity_sending_node.cpp.o[0m
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/velocity_sending_node.cpp: In function ‘int main(int, char**)’:
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/velocity_sending_node.cpp:42:3: error: expected ‘)’ before ‘{’ token
   {
   ^
CMakeFiles/velocity_sending_node.dir/build.make:62: recipe for target 'CMakeFiles/velocity_sending_node.dir/src/velocity_sending_node.cpp.o' failed
CMakeFiles/Makefile2:1421: recipe for target 'CMakeFiles/velocity_sending_node.dir/all' failed
Makefile:138: recipe for target 'all' failed
make[2]: *** [CMakeFiles/velocity_sending_node.dir/src/velocity_sending_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/velocity_sending_node.dir/all] Error 2
make: *** [all] Error 2
